Merevisi beberapa bagian untuk kelancaran pengguna menggunakan aplikasi web

--- a/src/public/pages/chatAI.html
+++ b/src/public/pages/chatAI.html
@@ -117,7 +117,7 @@
 </main>
 
 <!-- Input Chat -->
-<footer class="p-4 sticky bottom-0 max-w-7xl mx-auto px-4 sm:px-6 lg:px-16">
+<footer id="footer" class="p-4 sticky bottom-0 max-w-7xl mx-auto px-4 sm:px-6 lg:px-16">
   <form id="chatForm" class="flex items-center gap-2">
     <div class="flex-1 relative">
       <input type="text" id="userInput" placeholder="Tuliskan yang kamu rasakan..."
