--- a/src/public/pages/index.html
+++ b/src/public/pages/index.html
@@ -185,7 +185,8 @@
           </p>
           <div class="flex justify-center md:justify-start">
             <a
-              href="login.html"
+              id="start-journey-btn"
+              href="landingMood.html"
               class="bg-primary-04 text-neutral-09 font-semibold rounded-lg border border-neutral-09 py-2 px-6 transition hover:bg-primary-02 text-[clamp(1rem,2vw,1.125rem)] inline-block text-center"
             >
               Mulai Perjalanan
@@ -312,7 +313,8 @@
           </p>
           <div class="flex justify-center md:justify-start pt-2">
             <a
-              href="login.html"
+              id="start-now-btn"
+              href="landingReflection.html"
               class="bg-primary-04 text-neutral-09 font-semibold rounded-lg border border-neutral-09 py-2 px-6 transition hover:bg-primary-02 text-[clamp(1rem,2vw,1.125rem)]"
             >
               Mulai Sekarang
@@ -674,7 +676,8 @@
           </p>
           <div class="pt-2 flex justify-center md:justify-start">
             <a
-              href="login.html"
+              id="start-now-small-btn"
+              href="landingMood.html"
               class="bg-primary-04 text-neutral-09 font-semibold rounded-lg border border-neutral-09 py-2 px-6 transition hover:bg-primary-02 text-base"
             >
               Mulai Sekarang
