--- a/src/public/pages/landingMood.html
+++ b/src/public/pages/landingMood.html
@@ -224,7 +224,9 @@
         Lihat Rincian Mood-mu
       </a>
     </div>
-
+    </div>
+    </section>
+    
     <!-- Section Advantages -->
     <section id="advantages"
       class="min-h-screen flex flex-col md:flex-row items-center justify-between sm:px-8 md:px-10 lg:px-20 py-20 pb-32 gap-10 w-full max-w-screen-xl mx-auto">
