--- a/src/public/pages/termsConditions.html
+++ b/src/public/pages/termsConditions.html
@@ -83,7 +83,7 @@
                             </h2>
                             <div class="bg-gray-50 p-4 rounded-lg">
                                 <ul class="list-disc pl-5 space-y-2 text-neutral-07">
-                                    <li>Layanan MindSpark ditujukan untuk pengguna berusia minimal 13 tahun</li>
+                                    <li>Layanan MindSpark ditujukan untuk pengguna berusia minimal 6 tahun dengan pengawasan orang tua</li>
                                     <li>Anda bertanggung jawab penuh atas aktivitas akun Anda</li>
                                     <li>Dilarang menggunakan layanan untuk tujuan ilegal atau melanggar hukum</li>
                                 </ul>
@@ -176,14 +176,14 @@
 
                     <!-- Legal Links -->
                     <div class="flex flex-wrap justify-center gap-4 md:gap-8 text-sm">
+                        <a href="index.html" class="hover:underline hover:text-neutral-09 transition-colors">
+                            Beranda
+                        </a>
                         <a href="#header" class="hover:underline hover:text-neutral-09 transition-colors">
                             Syarat & Ketentuan
                         </a>
                         <a href="./privacyPolicy.html" class="hover:underline hover:text-neutral-09 transition-colors">
                             Kebijakan Privasi
-                        </a>
-                        <a href="./contact.html" class="hover:underline hover:text-neutral-09 transition-colors">
-                            Hubungi Kami
                         </a>
                     </div>
 
