--- a/src/public/pages/privacyPolicy.html
+++ b/src/public/pages/privacyPolicy.html
@@ -185,15 +185,15 @@
 
                     <!-- Legal Links -->
                     <div class="flex flex-wrap justify-center gap-4 md:gap-8 text-sm">
-                        <a href="./termsConditions.html"
+                        <a href="index.html" class="hover:underline hover:text-neutral-09 transition-colors">
+                            Beranda
+                        </a>
+                        <a href="termsConditions.html"
                             class="hover:underline hover:text-neutral-09 transition-colors">
                             Syarat & Ketentuan
                         </a>
                         <a href="#header" class="hover:underline hover:text-neutral-09 transition-colors">
                             Kebijakan Privasi
-                        </a>
-                        <a href="./contact.html" class="hover:underline hover:text-neutral-09 transition-colors">
-                            Hubungi Kami
                         </a>
                     </div>
 
